--- a/styles/input.css
+++ b/styles/input.css
@@ -5,3 +5,10 @@
 @layer base {
   @import 'fonts.css'
 }
+
+.prose :where(code):not(:where([class~="not-prose"] *))::before {
+  content: "";
+}
+.prose :where(code):not(:where([class~="not-prose"] *))::after {
+  content: "";
+}
