--- a/styles/output.css
+++ b/styles/output.css
@@ -426,6 +426,62 @@ Ensure the default browser behavior of the `hidden` attribute.
 @import 'fonts.css'
 ;
 
+html *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+html *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+html::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+html::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+html.dark *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
+html.dark *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
+html.dark::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
+html.dark::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
 *, ::before, ::after {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
@@ -488,6 +544,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: var(--tw-prose-links);
   text-decoration: underline;
   font-weight: 500;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.prose :where(a):not(:where([class~="not-prose"] *)):hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 
 .prose :where(strong):not(:where([class~="not-prose"] *)) {
@@ -1213,6 +1276,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .prose :where(code):not(:where([class~="not-prose"] *))::after {
   content: "";
+}
+
+.prose :where(pre):not(:where([class~="not-prose"] *)) {
+  color: var(--tw-prose-code);
+  background-color: var(--tw-prose-quote-borders);
+  overflow-x: auto;
+  font-weight: 400;
+  font-size: 0.875em;
+  line-height: 1.7142857;
+  margin-top: 1.7142857em;
+  margin-bottom: 1.7142857em;
+  border-radius: 0.375rem;
+  padding-top: 0.8571429em;
+  padding-right: 1.1428571em;
+  padding-bottom: 0.8571429em;
+  padding-left: 1.1428571em;
 }
 
 .hover\:text-gray-900:hover {
