--- a/styles/output.css
+++ b/styles/output.css
@@ -711,6 +711,7 @@ html.dark::selection {
   border-radius: 0.25rem;
   padding: 0.125rem 0.1875rem;
   background-color: var(--tw-prose-quote-borders);
+  font-weight: normal;
 }
 
 .prose :where(code):not(:where([class~="not-prose"] *))::before {
@@ -1094,6 +1095,13 @@ html.dark::selection {
   max-width: 56rem;
 }
 
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1279,8 +1287,6 @@ html.dark::selection {
 }
 
 .prose :where(pre):not(:where([class~="not-prose"] *)) {
-  color: var(--tw-prose-code);
-  background-color: var(--tw-prose-quote-borders);
   overflow-x: auto;
   font-weight: 400;
   font-size: 0.875em;
