--- a/styles/output.css
+++ b/styles/output.css
@@ -1009,11 +1009,6 @@ html.dark::selection {
   margin-right: 2.5rem;
 }
 
-.my-80 {
-  margin-top: 20rem;
-  margin-bottom: 20rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1046,12 +1041,6 @@ html.dark::selection {
   height: 100vh;
 }
 
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -1072,8 +1061,14 @@ html.dark::selection {
   height: 1rem;
 }
 
-.max-h-screen {
-  max-height: 100vh;
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-6 {
@@ -1165,6 +1160,11 @@ html.dark::selection {
   padding: 0.75rem;
 }
 
+.py-72 {
+  padding-top: 18rem;
+  padding-bottom: 18rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1232,24 +1232,13 @@ html.dark::selection {
   padding-bottom: 3rem;
 }
 
-.pt-80 {
-  padding-top: 20rem;
-}
-
-.pb-96 {
-  padding-bottom: 24rem;
-}
-
-.pt-96 {
-  padding-top: 24rem;
-}
-
 .text-center {
   text-align: center;
 }
 
-.align-middle {
-  vertical-align: middle;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -1270,11 +1259,6 @@ html.dark::selection {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-semibold {
