added styles to project entries

--- a/styles/input.css
+++ b/styles/input.css
@@ -13,7 +13,10 @@
   }
   html.dark {
     @apply selection:bg-slate-100 selection:text-slate-800;
-    @apply bg-htmldark
+    @apply bg-htmldark;
+  }
+  h6 {
+    @apply text-xs ml-2 mt-1.5;
   }
 }
 
@@ -24,16 +27,39 @@
   content: "";
 }
 
+.prose :where(blockquote p:first-of-type):not(:where([class~="not-prose"] *))::before {
+  content: "";
+}
+
+.prose :where(blockquote p:last-of-type):not(:where([class~="not-prose"] *))::after {
+  content: "";
+}
+
 .prose :where(pre):not(:where([class~="not-prose"] *)) {
   overflow-x: auto;
   font-weight: 400;
   font-size: 0.875em;
   line-height: 1.7142857;
-  margin-top: 1.7142857em;
-  margin-bottom: 1.7142857em;
+  margin-top: 0;
+  margin-bottom: 0;
   border-radius: 0.375rem;
   padding-top: 0.8571429em;
   padding-right: 1.1428571em;
   padding-bottom: 0.8571429em;
   padding-left: 1.1428571em;
+}
+
+.prose :where(a):not(:where([class~="not-prose"] *)) {
+  font-weight: 600;
+}
+
+.project-entry {
+  border-radius: 5px;
+  overflow: hidden;
+  overflow-x: auto;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding: 0.75rem;
+  display: flex;
+  flex-wrap: nowrap;
 }
