--- a/styles/output.css
+++ b/styles/output.css
@@ -492,6 +492,13 @@ html.dark {
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
 }
 
+h6 {
+  margin-left: 0.5rem;
+  margin-top: 0.375rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 *, ::before, ::after {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
@@ -1009,6 +1016,14 @@ html.dark {
   z-index: 50;
 }
 
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1099,6 +1114,10 @@ html.dark {
   max-width: 56rem;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -1116,6 +1135,10 @@ html.dark {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-around {
@@ -1136,6 +1159,31 @@ html.dark {
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
+.bg-amber-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 211 77 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-sky-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity));
+}
+
+.bg-purple-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 180 254 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1227,6 +1275,10 @@ html.dark {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -1242,14 +1294,18 @@ html.dark {
   line-height: 1rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+.font-normal {
+  font-weight: 400;
 }
 
 .font-semibold {
@@ -1262,10 +1318,6 @@ html.dark {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-normal {
-  font-weight: 400;
 }
 
 .text-gray-600 {
@@ -1296,18 +1348,41 @@ html.dark {
   content: "";
 }
 
+.prose :where(blockquote p:first-of-type):not(:where([class~="not-prose"] *))::before {
+  content: "";
+}
+
+.prose :where(blockquote p:last-of-type):not(:where([class~="not-prose"] *))::after {
+  content: "";
+}
+
 .prose :where(pre):not(:where([class~="not-prose"] *)) {
   overflow-x: auto;
   font-weight: 400;
   font-size: 0.875em;
   line-height: 1.7142857;
-  margin-top: 1.7142857em;
-  margin-bottom: 1.7142857em;
+  margin-top: 0;
+  margin-bottom: 0;
   border-radius: 0.375rem;
   padding-top: 0.8571429em;
   padding-right: 1.1428571em;
   padding-bottom: 0.8571429em;
   padding-left: 1.1428571em;
+}
+
+.prose :where(a):not(:where([class~="not-prose"] *)) {
+  font-weight: 600;
+}
+
+.project-entry {
+  border-radius: 5px;
+  overflow: hidden;
+  overflow-x: auto;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding: 0.75rem;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .hover\:text-gray-900:hover {
@@ -1342,6 +1417,31 @@ html.dark {
   --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
   --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
   --tw-prose-td-borders: var(--tw-prose-invert-td-borders);
+}
+
+.dark .dark\:bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-yellow-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-sky-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-purple-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 33 168 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-black {
@@ -1390,6 +1490,14 @@ html.dark {
 }
 
 @media (min-width: 640px) {
+  .sm\:float-right {
+    float: right;
+  }
+
+  .sm\:float-left {
+    float: left;
+  }
+
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
